# D100_ps1_ex4_titanic

./: .gitignore  README.md  Titanic Data Journey.ipynb  Titanic_Refactored.ipynb  environment.yml  pyproject.toml
titanic_package/: data_load.py  data_multivar.py  data_preprocess.py  data_vis.py  model_train.py
