[project]
name = "ps1_ex4_titanic"
version = "0.1.0"
description = "Refactoring a Jupyter notebook into a well-structured Git repository"
authors = [
  { name = "Luqmaan Sahar", email = "ls2001@cam.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.10"


[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"